<resources>
    <string name="app_name">Playxchange</string>
    <string name="txt_engine_description">Config Icon</string>
    <string name="txt_hint_login_email">Email</string>
    <string name="txt_hint_login_password">Password</string>
    <string name="txt_login_button">Login</string>
    <string name="txt_title_servidor">Servidor</string>
    <string name="txt_hint_ip">Introduza o endereço ip do servidor...</string>
    <string name="txt_confirm">Confirmar</string>
    <string name="txt_username_login">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_error_con">Não existe nenhuma conexão á internet</string>
    <string name="txt_error_authentication">Dados inválidos</string>
    <string name="txt_error_request">Não foi possível processar o pedido</string>
    <string name="txt_name_jogo">Nome do Jogo</string>
    <string name="txt_release">01/01/2024</string>
    <string name="txt_trailer">Trailer</string>
    <string name="txt_preco">Preço:</string>
    <string name="txt_minus">-</string>
    <string name="txt_plus">+</string>
    <string name="txt_add_carrinho">Adicionar ao Carrinho</string>
    <string name="txt_played">Jogados</string>
    <string name="txt_avg">Média</string>
    <string name="txt_wish">Desejados</string>
    <string name="txt_reviews">Reviews</string>
    <string name="txt_placeholder_descript">texto</string>
    <string name="txt_description_title">Descrição</string>
    <string name="txt_editora">Editora</string>
    <string name="txt_distribuidora">Distribuidora</string>
    <string name="txt_tags">Tags</string>
    <string name="txt_tag_placeholder">Tag 1</string>
    <string name="txt_choose_plataforma">Escolha uma plataforma</string>
    <string name="txt_quantity_val">0</string>
    <string name="txt_screenshots">Screenshots</string>
    <string name="txt_populares">Jogos Populares</string>
    <string name="txt_ver_catalogo">Ver Catálogo Completo</string>
    <string name="txt_last_releases">Últimos Lançamentos</string>
    <string name="txt_interagir">Interagir</string>
    <string name="txt_make_comment">Fazer Comentário Jogo</string>
    <string name="txt_clean_aval">Limpar avaliação</string>
    <string name="txt_apply">Aplicar</string>
    <string name="txt_cod">Código Promocional</string>
    <string name="txt_remove_coupoun">Remover</string>
    <string name="txt_plataforma_label">Plataforma:</string>
    <string name="txt_preco_unit_label">Preço Unitário:</string>
    <string name="txt_quantidade_label">Quantidade:</string>
    <string name="txt_chaves_label">Chaves:</string>
    <string name="txt_description_jogo">Poster do jogo</string>
    <string name="txt_subtotal_label">Subtotal:</string>
    <string name="txt_shipping_label">Método de Expedição:</string>
    <string name="txt_payment_label">Método de Pagamento:</string>
    <string name="txt_desconto_label">Desconto:</string>
    <string name="txt_total_label">Total:</string>
    <string name="txt_estado_label">Estado:</string>
    <string name="txt_data_label">Data:</string>
    <string name="txt_completar_pag">Completar pagamento</string>
    <string name="txt_taxas_label">Taxas:</string>
    <string name="txt_error_envio">Por favor selecione um método de envio.</string>
    <string name="txt_error_pagamento">Por favor selecione um método de pagamento.</string>
    <string name="txt_pagamento_invalid">Método de pagamento inválido</string>
    <string name="txt_envio_invalid">Método de envio inválido</string>
    <string name="txt_grid_poster_desc">Capa do jogo</string>
    <string name="txt_carrinho_vazio">O seu carrinho está vazio!</string>
    <string name="txt_products">Descobrir novos produtos</string>
    <string name="txt_jogados">Jogados</string>
    <string name="txt_following">A seguir</string>
    <string name="txt_followers">Seguidores</string>
    <string name="txt_desejados">Desejados</string>
    <string name="txt_favoritos">Favoritos</string>
    <string name="txt_config_api">Definições API</string>
    <string name="txt_edit_per">Editar Perfil</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_hint_nome">Nome</string>
    <string name="txt_hint_nif">NIF</string>
    <string name="txt_hint_bio">Biografia</string>
    <string name="txt_hint_nascimento">Data de nascimento</string>
    <string name="txt_save">Guardar</string>
    <string name="txt_hint_login_confirmar_password">Confirmar password</string>
    <string name="txt_edit">Ativar modo edição</string>
    <string name="txt_edit_disable">Desativar modo de edição</string>
    <string name="txt_delete_comentario">Apagar comentário</string>
    <string name="txt_delete">Apagar</string>
    <string name="txt_aval_invalida">Avaliação inválida (create)</string>
    <string name="txt_aval_inv">Avaliação inválida</string>
    <string name="txt_remover_aval">Remover Avaliação</string>
    <string name="txt_remover_com">Remover Comentário</string>
    <string name="txt_remover_aval_conf">Tem a certeza que deseja remover a sua avaliação?</string>
    <string name="txt_remover_com_conf">Tem a certeza que deseja remover o seu comentário?</string>
    <string name="txt_aval_removed">Avaliação removida com sucesso!</string>
    <string name="txt_aval_updated">Avaliação editada com sucesso!</string>
    <string name="txt_select_one_plat_error">Selecione uma plataforma antes de adicionar ao carrinho</string>
    <string name="txt_quant_inval">Quantidade inválida</string>
    <string name="txt_error_find_jogo">Não foi possível encontrar o jogo especificado</string>
    <string name="txt_error_find_comentario">Não foi possível encontrar o comentário especificado</string>
    <string name="txt_com_title">Comentário</string>
    <string name="txt_com_inv">Avaliação inválida</string>
    <string name="txt_error_comentario_edit">O comentário não pode estar vazio e não pode execeder os 2000 caracteres</string>
    <string name="txt_comentario_updated">Comentário editado com sucesso!</string>
    <string name="txt_comentario_removed">Comentário apagado com sucesso!</string>
    <string name="txt_yes">Sim</string>
    <string name="txt_no">Não</string>
    <string name="txt_cod_prom_valido">Necessita de inserir um código promocional válido</string>
    <string name="txt_emp_carrinho">Carrinho vazio</string>
    <string name="txt_comentarios_vazio">Não fez nenhum comentário!</string>
    <string name="txt_com_emp">Sem comentários</string>
    <string name="txt_comentarios_title">Meus comentários</string>
    <string name="txt_add_com">Criar comentário</string>
    <string name="txt_edit_com">Editar comentário</string>
    <string name="txt_comentario_added">Comentário adicionado com sucesso!</string>
    <string name="txt_aval_busy">Não é possível remover uma avaliação que exista atividade</string>
    <string name="txt_v_mais">Ver Mais</string>
    <string name="txt_metodo_p">Selecione um método de pagamento</string>
    <string name="txt_metodo_e">Selecione um método de envio</string>
    <string name="txt_sucess_edit_profile">Perfil atualizado com sucesso</string>
    <string name="txt_data_nasc_label">Selecione a data de nascimento</string>
    <string name="txt_data_nasc_error">Erro ao selecionar a data de nascimento</string>
    <string name="txt_username_val_error">"O username tem de ter pelo menos "</string>
    <string name="txt_nome_val_error">O nome não pode estar vazio</string>
    <string name="txt_nome_val_error_charac">"O nome não pode ter mais de "</string>
    <string name="txt_email_val_error">Email inválido</string>
    <string name="txt_bio_val_error">"A biografia não pode ter mais de "</string>
    <string name="txt_pass_length_error">"A password tem de ter pelo menos "</string>
    <string name="txt_characters">" caracteres"</string>
    <string name="txt_numeric_digits">" dígitos numéricos"</string>
    <string name="txt_nif_val_error">"O NIF tem de ter "</string>
    <string name="txt_pass_match_error">As passwords têm de ser iguais</string>
    <string name="txt_edit_profile_title">Editar Perfil</string>
    <string name="txt_fatura_empty">Não foi possível encontrar a fatura especificada</string>
    <string name="txt_details_fatura_title">Detalhes da Fatura</string>
    <string name="txt_error_make_req">Não foi possível efetuar o pedido</string>
    <string name="txt_sucess_prod_add">Produto adicionado ao carrinho</string>
    <string name="txt_invalid_act">Ação inválida</string>
    <string name="txt_aval_sucess">Avaliação adicionada</string>
    <string name="txt_aval_edit_sucess">Avaliação atualizada</string>
    <string name="txt_aval_remove_sucess">Avaliação removida</string>
    <string name="txt_favoritos_title">Favoritos</string>
    <string name="txt_jogados_title">Jogados</string>
    <string name="txt_desejados_title">Desejados</string>
    <string name="txt_error_user_length">O username deve ter mais de 2 caracteres</string>
    <string name="txt_error_pass_length">A password deve ter mais de 4 caracteres</string>
    <string name="txt_config_server_title">Configuração do servidor</string>
    <string name="txt_ip_change_sucess">IP alterado com sucesso</string>
    <string name="txt_error_ip">IP inválido</string>
    <string name="txt_produto_removed_sucess">Produto removido do carrinho</string>
    <string name="txt_used_code">O código promocional já foi usado</string>
    <string name="txt_zero_euro">0.00€</string>
    <string name="txt_comp_compra">Completar Compra</string>
    <string name="txt_keep_buy">Continuar a comprar</string>
    <string name="txt_sucess_purchase">Obrigado pela sua compra</string>
    <string name="txt_game_time">Título do Jogo</string>
    <string name="txt_data_lanc">Data de lançamento</string>
    <string name="txt_see_details">Ver Detalhes</string>
    <string name="txt_sucess_add_jogado">Jogo adicionado aos jogados com sucesso!</string>
    <string name="txt_sucess_add_favorito">Jogo adicionado aos favoritos com sucesso!</string>
    <string name="txt_sucess_add_desejado">Jogo adicionado aos desejados com sucesso!</string>
    <string name="txt_sucess_remove_jogado">Jogo removido dos jogados com sucesso!</string>
    <string name="txt_sucess_remove_favorito">Jogo removido dos favoritos com sucesso!</string>
    <string name="txt_sucess_remove_desejado">Jogo removido dos desejados com sucesso!</string>
    <string name="txt_aval_first">Necessita de avaliar o jogo antes de comentar!</string>
</resources>