<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ac_settings"
        android:title="@string/txt_config_api"
        android:icon="@drawable/ic_settings_24"
        app:iconTint="@color/subtle_dark"

        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/ac_edit"
        android:title="@string/txt_edit_per"
        android:icon="@drawable/ic_edit_24"
        app:iconTint="@color/subtle_dark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ac_logout"
        android:title="@string/txt_logout"
        android:icon="@drawable/ic_logout_24"
        app:iconTint="@color/subtle_dark"
        app:showAsAction="ifRoom" />
</menu>