<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ac_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_save_24"
        android:title="@string/txt_save"
        app:iconTint="@color/subtle_dark"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/ac_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_delete"
        android:title="@string/txt_delete"
        app:iconTint="@color/subtle_dark"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/ac_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_edit_off_24"
        android:title="@string/txt_edit"
        app:iconTint="@color/subtle_dark"
        app:showAsAction="ifRoom" />
</menu>