<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/navbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_payment_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <RadioGroup
                android:id="@+id/rgPagamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/paymentCreditCardRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_radio_button"
                    android:button="@null"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/ic_shopping_cart_24"
                    android:layout_gravity="center_vertical"
                    android:drawableTint="@color/text"
                    />

                <RadioButton
                    android:id="@+id/payM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_radio_button"
                    android:button="@null"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    />

            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_shipping_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginTop="16dp" />

            <RadioGroup
                android:id="@+id/rgEnvio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/shippingStandardRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Envio Padrão"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton" />


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/shippingExpressRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Envio Expresso"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton" />
            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_subtotal_label"
                android:layout_marginTop="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTaxas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_taxas_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDesconto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_desconto_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalComDesconto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_total_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="?attr/colorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnComp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_completar_pag"
                android:layout_marginTop="24dp"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="?attr/colorOnPrimary"
                style="@style/Widget.Material3.Button" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>